--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,5 +22,5 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
           docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-          docker image build -t deletescape/toraberu .
-          docker push deletescape/toraberu:latest
+          docker image build -t deletescape/suzuha .
+          docker push deletescape/suzuha:latest
